syntax = "proto3";
package commonsvc;

message TopicList {
    oneof list {
        TopicListInit init = 1;
        TopicListAdd add = 2;
    }
}


message TopicListInit {
    repeated TopicInfos topics = 1;
}

message TopicListAdd {
    repeated TopicInfos topics = 1;
}

message TopicInfos {
    string topic = 2;
    repeated PartitionInfos partition =3;
}

message PartitionInfos{
    // 该 partition 的id
    uint32 id = 1;
    // 该 partition 所在的 broker id
    uint32 broker_id = 2;
    // 该 broker 的地址 
    string broker_addr = 3;
}


message CooListReq {
    string token = 1;
}

message CooListResp {
    repeated CooInfo list = 1;
}

message CooInfo {
    CooInfoAction act = 1;
    uint32 id = 2;
    string coo_addr = 3;
    string raft_addr = 4;
    CooRole role = 5;
}

enum CooInfoAction {
    Add = 0;
    Remove = 1;
    NewLeader = 2;
}

enum CooRole {
    Leader = 0;
    Candidate = 1;
    Follower = 2;
    Learner = 3;
}